<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">KK唱响</string>
    <string name="kk_money">秀币</string>
    <string name="kk_app_name">KK唱响</string>
    <string name="kk_company_phone">"4008269186"</string>
    <string name="kk_loading">正在加载&#8230;</string>
    <string name="kk_uploading">正在上传&#8230;</string>
    <string name="kk_modifying_nickname">正在修改昵称&#8230;</string>
    <string name="kk_get_upload_url_failed">获取上传地址失败</string>
    <string name="kk_upload_url_invalid">上传地址非法</string>
    <string name="kk_upload_cancel">上传取消</string>
    <string name="kk_upload_failed">上传失败</string>
    <string name="kk_load_failed">加载失败</string>
    <string name="kk_no_sdcard">未发现SD卡</string>
    <string name="kk_relogin">重新登录</string>
    <string name="kk_ok">确定</string>
    <string name="kk_cancel">取消</string>
    <string name="kk_please_retry">，点击重试</string>
    <string name="kk_exit">退出</string>
    <string name="kk_load_more">加载更多&#8230;</string>
    <string name="kk_login_register">登录/注册</string>
    <string name="kk_register_code_info">输入邀请码，您和您的小伙伴都可获得奖励哦</string>
    <string name="kk_register_code_hint">可选</string>
    <string name="kk_civilization_hint">"        绿色健康的平台，需要大家的共同守护。文明行为，诚信自律，让我们互尊互爱，享受视频交友带来的乐趣吧!  :)"</string>
    <string name="kk_civilization_sure">"我知道了"</string>
    <string name="kk_civilization_title">"使用须知"</string>
    <string name="kk_sex_woman">"女"</string>
    <string name="kk_sex_man">"男"</string>
    <string name="kk_logining">正在登录&#8230;</string>
    <string name="kk_start_logining_chatroom">努力加载中&#8230;</string>
    <string name="kk_retry">重试</string>
    <string name="kk_other">其他</string>
    <string name="kk_set_nickname">设置昵称</string>
    <string name="kk_submit">提交</string>
    <string name="kk_nickname_text_man">大哥您怎么还木有昵称，赶紧取一个。不用多久，你就会升职加薪，当上总经理，出任CEO，迎娶白富美，走上人生巅峰。是不是还有一点小激动啊？</string>
    <string name="kk_nickname_text_girl">这位小姐，我见你骨骼惊奇，器宇不凡！我这里有一本《如何钓取高富帅》转送与你，不知可否告诉我您的芳名？</string>
    <string name="delete_account_info">您确定要删除该账号吗？</string>
    <string name="delete_account_info_title">删除帐号</string>
    <string name="delete_account_chat_msg">清空该账号聊天记录</string>
    <string name="kk_quit_room_again">"再按一次退出直播间"</string>
    <string name="kk_download_failed">下载失败</string>
    <string name="kk_home_recommend_text">KK推荐</string>
    <string name="kk_know">知道了</string>
    <string name="kk_save">保存</string>
    <string name="send_request_failed">请求失败</string>
    <string name="delete_dynamic_info">您确定要删除吗？</string>
    <string name="kk_delete_dynamic">删除</string>
    <string name="kk_no_longer_remind">不再提醒</string>
    <string name="kk_save_image">图片已保存至</string>
    <string name="kk_failed_save_image">图片保存失败</string>
    <string name="kk_download_system_limit">您当前的系统禁用了下载功能，请先到下载管理器内启用该功能</string>
    <string name="kk_auto_followed_tip">您还可以开启开播通知噢，直播开始后会第一时间通知您~</string>
    <string name="kk_navigation_tab_live">直播</string>
    <string name="kk_navigation_tab_hotscreen">热拍</string>
    <string name="kk_navigation_tab_dis">发现</string>
    <string name="kk_navigation_tab_news">消息</string>
    <string name="kk_navigation_tab_me">我</string>
    <string name="kk_duplicate_account">用户名已被占用，换一个试试吧</string>
    <string name="kk_account_pwd_wrong">您的账号和密码不匹配</string>
    <string name="kk_id_pwd_wrong">您的账号和密码不匹配</string>
    <string name="kk_phone_pwd_wrong">您的账号和密码不匹配</string>
    <string name="kk_blank_user">对不起，您无法使用此功能，请联系客服</string>
    <string name="kk_user_ip_limit">这个IP注册帐号太多啦，过会儿再来吧</string>
    <string name="kk_not_registered">未注册，请先注册</string>
    <string name="kk_register_limit_hint">您注册的帐号太多啦，还是赶紧登录吧</string>
    <string name="kk_login_qq_openid_failed">获取openId失败</string>
    <string name="kk_login_qq_server_error">访问腾讯服务器出错</string>
    <string name="kk_received_invitation_msg_head"><![CDATA["您已成功邀请<font color='#f4367d'><xliff:g>%s</xliff:g></font>名用户注册KK唱响，"]]></string>
    <string name="kk_received_invitation_msg_end"><![CDATA["总计获得奖励<font color='#f4367d'><xliff:g>%s</xliff:g></font>秀币。"]]></string>
    <string name="kk_no_password">密码未设置</string>
    <string name="kk_no_password_to_set">亲，您还没有KK密码，为了您的账号资金安全，赶紧设置一下吧</string>
    <string name="kk_title_set_password">密码设置</string>
    <string name="kk_title_set_password_loading">正在设置新密码&#8230;</string>
    <string name="kk_set_password_ok">密码设置成功，请牢记密码</string>
    <string name="kk_set_password_failed">密码设置失败</string>
    <string name="kk_set_password">您还没有设置密码吧？请赶快联系客服MM，验证您的基本情况后设置一个密码再登录吧～\n客服qq:2322590867、2036199246</string>
    <string name="new_str">NEW</string>
    <string-array name="kk_send_gift_count_arr">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>V(50个)</item>
        <item>心(99个)</item>
        <item>笑脸(100个)</item>
        <item>LOVE(300个)</item>
        <item>爱之箭(520个)</item>
        <item>比翼双飞(999个)</item>
        <item>一生一世(1314个)</item>
        <item>生生世世(3344个)</item>
    </string-array>
    <string name="kk_register_award">奖励</string>
    <string name="kk_register_getaward">领取奖励</string>
    <string name="kk_register_getaward_inused">非首次注册，邀请无效。即将跳转～</string>
    <string name="kk_user_register_account_has_sensitive_sre">用户名中包含不允许的字符</string>
    <string name="kk_user_register_account_all_number">用户名不能为纯数字</string>
    <string name="kk_register_getaward_yourself">对不起，不能填写您自己的邀请码哦～请重新输入</string>
    <string name="kk_register_getaward_nullity">您输入的邀请码无效，请重新输入</string>
    <string name="kk_register_getawardtext">恭喜获得受邀奖励:</string>
    <string name="kk_register_vip">普通VIP（<xliff:g>%s</xliff:g>）天</string>
    <string name="kk_register_failed_verify_error">请输入正确的验证码</string>
    <string name="kk_register_failed_used">该手机号已被注册或绑定</string>
    <string name="kk_quick_register">一键注册</string>
    <string name="kk_login">登录</string>
    <string name="kk_register">注册/登录</string>
    <string name="kk_quick_register_info">KK唱响需要用您的手机向服务器发送一条短消息来完成注册。注册免费，只需要您向运营商支付普通短信费用，是否注册？</string>
    <string name="kk_quick_register_failed_info">啊哦～注册失败！您可以稍后点击一键注册进行重试，也可以采用普通方式注册。</string>
    <string name="kk_quick_register_bind_by_other">啊哦～您的手机号已经绑定过其他账号，无法进行一键注册。您可以对上一个账号解绑手机号后再试，也可以采用普通方式注册。</string>
    <string name="kk_quick_register_limit_hour">啊哦～您的手机号达到当前小时注册上限了，等会再来试试吧</string>
    <string name="kk_quick_register_limit_day">啊哦～您的手机号达到本日注册上限了，明天再来试试吧</string>
    <string name="kk_quick_register_sending_msg">短信发送中&#8230;</string>
    <string name="kk_quick_registering">注册中&#8230;</string>
    <string name="kk_quick_register_failed">注册失败</string>
    <string name="kk_register_success">注册成功</string>
    <string name="kk_quick_register_send_msg">注册</string>
    <string name="kk_quick_register_later">稍后再试</string>
    <string name="kk_quick_register_update_userinfo">正在更新个人信息&#8230;</string>
    <string name="kk_register_common">普通注册</string>
    <string name="kk_register_must_input">必填，3&#8211;10个字符</string>
    <string name="kk_register_nickname_ok">修改昵称成功</string>
    <string name="kk_register_nickname_fail">修改昵称失败</string>
    <string name="kk_name_series_number">您的昵称中含有过多的数字，换个有意义的名字哦</string>
    <string name="kk_password_check_number">纯数字密码过于简单，再复杂点吧~</string>
    <string name="kk_password_check_EN">纯英文密码过于简单，再复杂点吧~</string>
    <string name="kk_paymoney_wait">正在充值&#8230;</string>
    <string name="kk_fill_money_success">充值成功</string>
    <string name="kk_fill_money_retry">重试</string>
    <string name="kk_get_meshow_money_refresh">啊哦～充值未成功，刷新一下试试？</string>
    <string name="kk_get_meshow_money_failed">啊哦～充值仍未成功，请重新登录后查看。如果问题仍然存在，请联系客服。</string>
    <string name="kk_fill_money_network_falied">啊哦～由于第三方网络原因，充值未成功，如果问题仍然存在，请联系客服</string>
    <string name="kk_fill_money_refresh">更新秀币</string>
    <string name="kk_attention_self">不能关注自己</string>
    <string name="kk_name_card_props">道具</string>
    <string name="kk_name_card_messages">动态</string>
    <string name="kk_kuaibo_reg_title">登录更精彩，免费领秀币</string>
    <string name="kk_kuaibo_reg_info">秀币是您在这里送礼玩乐的必备哦～</string>
    <string name="kk_fill_first_no_money">您的余额不足哦～\n首次充值可获得豪华大礼包</string>
    <string name="kk_fill_first_task">首次充值可获得豪华大礼包</string>
    <string name="kk_fill_first_task_complete">恭喜您，获得豪华大礼包</string>
    <string name="kk_fill_first_title_one">一重礼</string>
    <string name="kk_fill_first_title_two">二重礼</string>
    <string name="kk_fill_first_title_three">三重礼</string>
    <string name="kk_fill_first_present_info">豪华大礼包</string>
    <string name="kk_fill_first_get_present_error">大礼包还在派送中，请稍后到任务列表中领取</string>
    <string name="kk_task_must_fillmoney">马上充值</string>
    <string name="kk_task_must_pay">话费支付</string>
    <string name="kk_task_must_get">领取</string>
    <string name="kk_error_unknow">系统未知错误</string>
    <string name="kk_error_http_invalid_token">您的帐号已经在其他地方登录，请重新登录</string>
    <string name="kk_error_invalid_param">非法参数</string>
    <string name="kk_error_invalid_name">昵称包含不允许的字符</string>
    <string name="kk_error_no_network">当前没有网络</string>
    <string name="kk_error_server_rc">啊哦～网络连接失败</string>
    <string name="kk_error_io">网络连接失败</string>
    <string name="kk_error_socket">网络连接失败</string>
    <string name="kk_error_timeout">网络连接超时</string>
    <string name="kk_error_oom">图片加载失败～</string>
    <string name="kk_error_file_not_found">文件未找到</string>
    <string name="kk_error_file_not_mp4">文件格式不支持</string>
    <string name="kk_error_file_not_gif">暂不支持GIF</string>
    <string name="kk_error_payment_timeout">服务器连接超时，请稍后重新登录检查充值是否成功</string>
    <string name="kk_error_weibo_server">授权失败</string>
    <string name="kk_auth_success">授权成功</string>
    <string name="kk_error_reduplicate_nickname">昵称已被占用，换一个试试吧！</string>
    <string name="kk_network_tips">观看视频直播将产生较大的网络流量，建议您在Wi-Fi环境下使用</string>
    <string name="kk_network_tips_ok">我知道了</string>
    <string name="kk_network_tips_cancel">先不看</string>
    <string name="kk_room_play_on_pc">主播在电脑上直播了</string>
    <string name="kk_room_play_on_mobile">主播在手机上直播了</string>
    <string name="kk_room_chat_online_time_h">小时</string>
    <string name="kk_room_chat_online_time_m">分钟</string>
    <string name="kk_room_next_start">开播时间:<xliff:g>%s</xliff:g></string>
    <string name="kk_constration_to_giftstar">恭喜<xliff:g>%s</xliff:g>成为上周礼物之星</string>
    <string name="kk_gift_star_str">礼物之星</string>
    <string name="kk_room_no_notice">暂无公告</string>
    <string name="kk_report_str">举报提交成功。如经核实，该用户将被禁言或禁播</string>
    <string name="kk_year">年</string>
    <string name="kk_month">月</string>
    <string name="kk_day">日</string>
    <string name="kk_yesterday">昨天</string>
    <string name="kk_room_tab_pub">公聊</string>
    <string name="kk_room_tab_pub_hd">聊天</string>
    <string name="kk_room_tab_private">私聊</string>
    <string name="kk_room_tab_viewer">观众(<xliff:g>%s</xliff:g>)</string>
    <string name="kk_room_tab_more">宝盒</string>
    <string name="kk_room_choice_song">点歌</string>
    <string name="kk_room_add_flag">开播通知</string>
    <string name="kk_room_add_flag_ok">马上开启</string>
    <string name="kk_room_add_flag_hint">开启\"开播通知\"后，<xliff:g>%s</xliff:g>开播时，您可以免费在第一时间得到通知哦～</string>
    <string name="kk_room_flag_notice">开播通知我</string>
    <string name="kk_room_flag_cancel">取消</string>
    <string name="kk_room_mem_list_send_gift">送TA礼物</string>
    <string name="kk_room_mem_list_chat_with">与TA聊天</string>
    <string name="kk_room_mem_list_kick_out">踢出1小时</string>
    <string name="kk_room_mem_list_no_speak">禁言5分钟</string>
    <string name="kk_room_mem_list_report">举报</string>
    <string name="kk_room_mem_report_bawdy">淫秽色情</string>
    <string name="kk_room_mem_report_attack">人身攻击</string>
    <string name="kk_room_mem_report_spam">垃圾广告</string>
    <string name="kk_room_mem_report_other">其他</string>
    <string name="kk_room_no_car_and_buy">您还没有汽车，是否去车市购买？</string>
    <string name="kk_room_park_select_car_str">请选择要停放的车辆</string>
	<string name="kk_register_sex">性别:</string>
    <string name="kk_s_by_by_by">购买</string>
    <string name="kk_s_park">停车</string>
</resources>