<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dip"
    android:layout_height="220dip"
    android:background="@color/transparent">

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="320dip"
        android:layout_height="220dip"
        android:layout_centerHorizontal="true"
        android:background="@color/kk_background_white"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/register_text_one"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dip"
            android:gravity="center_horizontal"
            android:text="@string/kk_kuaibo_reg_title"
            android:textColor="@color/kk_text_black"
            android:textSize="@dimen/kk_text_dialog_title_size"/>

        <TextView
            android:id="@+id/register_text_des"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dip"
            android:gravity="center_horizontal"
            android:text="@string/kk_kuaibo_reg_info"
            android:textColor="@color/kk_room_text_gray"
            android:textSize="@dimen/kk_text_big_size" />

        <LinearLayout
            android:id="@+id/register_login_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dip"
            android:layout_marginRight="27dip"
            android:layout_marginTop="30dip" >

            <Button
                android:id="@+id/quick_register"
                android:layout_width="90dip"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@drawable/kk_register_btn"
                android:gravity="center"
                android:text="@string/kk_quick_register"
                android:textColor="@color/kk_text_white"
                android:textSize="@dimen/kk_text_large_size" />

            <Button
                android:id="@+id/login"
                android:layout_width="90dip"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_weight="1"
                android:background="@drawable/kk_register_merger_btn"
                android:gravity="center"
                android:text="@string/kk_login"
                android:textColor="@color/kk_news_notify_bnt"
                android:textSize="@dimen/kk_text_large_size" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>