<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
     >
     
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/kk_register_sex"
        android:textColor="@color/kk_dynamic_fontcolor_context"
            android:textSize="@dimen/kk_text_large_size" 
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginLeft="15dp"
        android:layout_marginRight="25dp"
        >

        <ImageView
            android:id="@+id/man_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/kk_enroll_sex_man_pressed" />

        <TextView
            android:id="@+id/man_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/man_choice"
            android:paddingLeft="10dip"
            android:text="@string/kk_sex_man"
            android:textColor="@color/kk_dynamic_fontcolor_context"
            android:textSize="@dimen/kk_text_large_size" />

        <ImageView
            android:id="@+id/woman_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_toRightOf="@+id/man_text"
            android:src="@drawable/kk_enroll_sex_woman_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/woman_choice"
            android:paddingLeft="10dip"
            android:text="@string/kk_sex_woman"
             android:textColor="@color/kk_dynamic_fontcolor_context"
            android:textSize="@dimen/kk_text_large_size"/>
    </RelativeLayout>

</LinearLayout>