<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:paddingLeft="30dip"
    android:paddingRight="22dip" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dip"
        android:layout_marginTop="8dip"
        android:background="@drawable/kk_civilization_dialog_bg"
        android:paddingBottom="30dip"
        android:paddingTop="40dip" >

        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dip"
            android:lineSpacingExtra="6dip"
            android:paddingLeft="8dip"
            android:paddingRight="8dip"
            android:text="@string/kk_civilization_hint"
            android:textColor="@color/kk_custom_black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/sure_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/desc"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dip"
            android:background="@drawable/kk_civilization_bt"
            android:paddingLeft="28dip"
            android:paddingRight="28dip"
            android:text="@string/kk_civilization_sure"
            android:textColor="@color/kk_app_color_yellow" />

        <ImageView
            android:layout_marginTop="18dip"
            android:layout_marginLeft="8dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/kk_civilization_icon" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dip"
        android:text="@string/kk_civilization_title"
        android:textColor="@color/kk_app_color_dark_gray" >
    </TextView>

</RelativeLayout>